feat: add command healthcheck type
